--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@types/history": "^4.7.2",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/reactstrap": "^6.4.3",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "connected-react-router": "^6.0.0",
     "express": "^4.16.4",
     "fast-xml-parser": "^3.12.10",
     "history": "^4.7.2",
+    "promise-polyfill": "8.1.0",
     "prop-types": "^15.6.2",
+    "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
@@ -19,7 +30,8 @@
     "react-xml-parser": "^1.0.8",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +47,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/ramda": "^0.25.45"
+  }
 }
